--- a/app/src/main/res/menu/menu_main.xml
+++ b/app/src/main/res/menu/menu_main.xml
@@ -19,6 +19,11 @@
         android:title="Subscription Info"
         app:showAsAction="never" />
     <item
+        android:id="@+id/artist_settings"
+        android:orderInCategory="100"
+        android:title="Meet the Artist"
+        app:showAsAction="never" />
+    <item
         android:id="@+id/rate_settings"
         android:orderInCategory="100"
         android:title="Rate Draw"
