--- a/app/src/main/res/layout/fragment_third.xml
+++ b/app/src/main/res/layout/fragment_third.xml
@@ -5,9 +5,9 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     app:layout_behavior="@string/appbar_scrolling_view_behavior"
-    tools:context=".BookActivity"
+    tools:context=".MainActivity"
     android:fillViewport="true"
-    tools:showIn="@layout/activity_book">
+    tools:showIn="@layout/fragment_third">
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -16,25 +16,32 @@
         android:orientation="vertical"
         android:paddingLeft="0dp">
 
-        <TextView
-            android:id="@+id/primary"
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="How to draw a full superhero"
-            android:paddingTop="15dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColor="#3c3c3c" />
+            android:layout_height="400dp"
+            android:src="@drawable/head1_cover"/>
 
-        <TextView
-            android:id="@+id/secondary"
+        <ImageView
             android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="Complete this ttead"
-            android:paddingTop="0dp"
-            android:paddingLeft="15dp"
-            android:paddingRight="15dp"
-            android:textColor="#c0b9b9" />
+            android:layout_height="400dp"
+            android:src="@drawable/head1_cover"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:src="@drawable/head1_cover"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:src="@drawable/head1_cover"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:src="@drawable/head1_cover"/>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="400dp"
+            android:src="@drawable/head1_cover"/>
+
         <com.learn.howtodraw.draw.ExpandableGridView
             android:numColumns="auto_fit"
             android:gravity="center"
@@ -42,6 +49,6 @@
             android:stretchMode="columnWidth"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
-            android:id="@+id/grid" />
+            android:id="@+id/gridthird" />
     </LinearLayout>
 </android.support.v4.widget.NestedScrollView>
