Moved Subscription buttons into Subscription page

--- a/app/src/main/res/values/font_awesome.xml
+++ b/app/src/main/res/values/font_awesome.xml
@@ -4,7 +4,7 @@
 
     <string name="fa_money">&#xf0d6; Subscribe</string>
     <string name="fa_money2">&#xf0d6; Buy and use</string>
-    <string name="fa_money3">&#xf0d6; Buy and keep</string>
+    <string name="fa_money3">&#xf0d6; Purchase Book</string>
     <string name="fa_star_rate">&#xf005; Rate Draw</string>
 
     <string name="fa_adjust">&#xf042;</string>
