--- a/app/src/main/res/layout/activity_page.xml
+++ b/app/src/main/res/layout/activity_page.xml
@@ -15,8 +15,7 @@
         android:layout_height="fill_parent"
         android:src="@drawable/mi3_4figure21" />
 
-
-    <com.learn.howtodraw.draw.FontA.TextAwesome
+ <!--   <com.learn.howtodraw.draw.FontA.TextAwesome
         android:id="@+id/info"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
@@ -26,45 +25,53 @@
         android:layout_marginTop="20dp"
         android:text="@string/fa_question_circle"
         android:textColor="@color/colorAccent"
-        android:textSize="20dp" />
+        android:textSize="20dp" />-->
 
-    <com.learn.howtodraw.draw.FontA.TextAwesome
-        android:id="@+id/nextImage2"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:layout_alignParentRight="true"
-        android:layout_marginBottom="20dp"
-        android:layout_marginRight="20dp"
-        android:text="@string/fa_angle_right"
-        android:textColor="@color/colorAccent"
-        android:textSize="50dp" />
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="30dp"
+        android:orientation="horizontal"
+        android:gravity="center_horizontal"
+        android:layout_marginLeft="80dp"
+        android:layout_marginRight="80dp">
 
+        <TextView
+            android:id="@+id/pageNumber"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:text="0"
+            android:textColor="@color/colorAccent" />
 
+        <TextView
+            android:id="@+id/grid_text2"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:text="/"
+            android:textColor="@color/colorAccent" />
 
-    <TextView
-        android:id="@+id/grid_text"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:text="Share you Drawing"
-        android:textColor="@color/colorAccent"
-        android:gravity="center"
-        android:layout_alignParentBottom="true"
-        android:padding="80dp"/>
+        <TextView
+            android:id="@+id/endPage"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:layout_alignParentEnd="false"
+            android:layout_alignParentRight="true"
+            android:gravity="center"
+            android:paddingTop="10dp"
+            android:text=""
+            android:textColor="@color/colorAccent" />
 
-
-
-    <com.learn.howtodraw.draw.FontA.TextAwesome
-        android:id="@+id/camera"
-        android:layout_width="fill_parent"
-        android:layout_height="wrap_content"
-        android:layout_alignParentBottom="true"
-        android:gravity="center"
-        android:padding="25dp"
-        android:text="@string/fa_camera_retro"
-        android:textColor="@color/colorAccent"
-        android:textSize="40dp" />
-
+    </LinearLayout>
 
     <com.learn.howtodraw.draw.FontA.TextAwesome
         android:id="@+id/previousImage2"
@@ -75,6 +82,75 @@
         android:layout_marginBottom="20dp"
         android:layout_marginLeft="20dp"
         android:text="@string/fa_angle_left"
+        android:textColor="@color/colorAccent"
+        android:textSize="50dp" />
+
+
+
+
+    <TextView
+        android:id="@+id/share_text"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="false"
+        android:layout_alignParentRight="true"
+        android:gravity="center"
+        android:paddingBottom="10dp"
+        android:text="share your drawing"
+        android:textColor="@color/colorAccent" />
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="100dp"
+        android:layout_alignParentBottom="true"
+        android:gravity="center"
+        android:id="@+id/shareLayout">
+
+        <com.learn.howtodraw.draw.FontA.TextAwesome
+            android:id="@+id/twitter"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+
+            android:text="@string/fa_twitter"
+            android:textColor="@color/colorAccent"
+            android:textSize="20dp" />
+
+        <com.learn.howtodraw.draw.FontA.TextAwesome
+            android:id="@+id/camera"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+            android:padding="5dp"
+            android:text="@string/fa_camera_retro"
+            android:textColor="@color/colorAccent"
+            android:textSize="40dp" />
+
+        <com.learn.howtodraw.draw.FontA.TextAwesome
+            android:id="@+id/facebook"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_alignParentBottom="true"
+            android:gravity="center"
+
+            android:paddingTop="-50dp"
+            android:text="@string/fa_facebook"
+            android:textColor="@color/colorAccent"
+            android:textSize="20dp" />
+    </LinearLayout>
+
+    <com.learn.howtodraw.draw.FontA.TextAwesome
+        android:id="@+id/nextImage2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_alignParentBottom="true"
+        android:layout_alignParentRight="true"
+        android:layout_marginBottom="20dp"
+        android:layout_marginRight="20dp"
+        android:text="@string/fa_angle_right"
         android:textColor="@color/colorAccent"
         android:textSize="50dp" />
 
