--- a/app/src/main/res/layout/fragment_dialog_subscribe.xml
+++ b/app/src/main/res/layout/fragment_dialog_subscribe.xml
@@ -1,41 +1,86 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:orientation="vertical" android:layout_width="match_parent"
+
+<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@color/common_google_signin_btn_text_dark_pressed">
+    android:fillViewport="true"
+    app:layout_behavior="@string/appbar_scrolling_view_behavior">
 
-    <ImageView
-        android:id="@+id/image"
+
+    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:src="@drawable/book1cover"
-        android:layout_marginTop="50dp"/>
+        android:layout_height="match_parent"
+        android:background="@color/common_google_signin_btn_text_dark_pressed"
+        android:nestedScrollingEnabled="true"
+        android:orientation="vertical"
+        android:scrollIndicators="right">
 
-    <TextView
-        android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Subscription Information"
-        android:textSize="20dp"
-        android:layout_gravity="center_horizontal"
-        android:layout_margin="20dp"
-        android:textColor="#282828"/>
+        <ImageView
+            android:id="@+id/image"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="50dp"
+            android:src="@drawable/book1cover" />
 
-    <TextView
-        android:id="@+id/textabout"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="This is why you should love Learn to draw"
-        android:layout_gravity="center"
+        <TextView
+            android:id="@+id/title"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_margin="20dp"
+            android:text="Subscription Information"
+            android:textColor="#282828"
+            android:textSize="20dp" />
 
-        android:layout_margin="20dp"
-        android:paddingBottom="100dp"
-        android:textSize="15dp"
-        android:textColor="#282828"/>
+        <TextView
+            android:id="@+id/textabout"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center"
+            android:layout_margin="20dp"
+
+            android:paddingBottom="5dp"
+            android:text="This is why you should love Learn to draw"
+            android:textColor="#282828"
+            android:textSize="15dp" />
+
+        <TextView
+            android:id="@+id/subscribedQuestion"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:paddingLeft="15dp"
+            android:paddingTop="15dp"
+            android:text="Are you subscribed?"
+            android:textColor="#3c3c3c" />
 
 
 
 
+        <com.learn.howtodraw.draw.FontA.ButtonAwesome
+            android:id="@+id/buyBookButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="5dp"
+            android:background="#e1ecf4"
+            android:text="@string/fa_money3"
+            android:textColor="#84c380"
+            android:textSize="20dp" />
 
+        <com.learn.howtodraw.draw.FontA.ButtonAwesome
+            android:id="@+id/subscribeButton"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:layout_marginBottom="10dp"
+            android:background="#e1ecf4"
+            android:text="@string/fa_money"
+            android:textColor="#84c380"
+            android:textSize="20dp" />
 
-</LinearLayout>
+    </LinearLayout>
+
+</android.support.v4.widget.NestedScrollView>
