--- a/app/src/main/res/layout/fragment_dialog_subscribe.xml
+++ b/app/src/main/res/layout/fragment_dialog_subscribe.xml
@@ -18,11 +18,20 @@
         android:scrollIndicators="right">
 
         <ImageView
-            android:id="@+id/image"
+            android:id="@+id/bookThumb"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginTop="50dp"
             android:src="@drawable/book1cover" />
+
+        <TextView
+            android:id="@+id/book_name"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="center_horizontal"
+            android:text="Book name goes here"
+            android:textColor="#282828"
+            android:textSize="20dp" />
 
         <TextView
             android:id="@+id/title"
