--- a/app/src/main/res/layout/grid_single.xml
+++ b/app/src/main/res/layout/grid_single.xml
@@ -29,15 +29,37 @@
                 android:layout_height="1dp"
                 android:background="#eeeeee" />
 
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            android:weightSum="1">
             <TextView
                 android:id="@+id/grid_text"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text=""
+                android:text="test test test"
                 android:paddingLeft="7dp"
                 android:paddingRight="7dp"
-                android:paddingTop="2dp"
-                android:textColor="#3c3c3c" />
+                android:paddingTop="7dp"
+                android:textColor="#3c3c3c"
+                android:layout_weight="0.95"/>
+
+            <com.learn.howtodraw.draw.FontA.TextAwesome
+                android:id="@+id/ticklock2"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="5dp"
+                android:text="@string/fa_lock"
+                android:textAlignment="gravity"
+                android:paddingTop="10dp"
+                android:gravity="right"
+                android:textColor="@color/colorAccent"
+                android:textSize="14dp"
+                android:layout_marginRight="5dp" />
+
+            </LinearLayout>
 
 
         </LinearLayout>
